# lob-engine

./: CMakeLists.txt  README.md  bench_results.json  demo.cast  vcpkg.json
.github/workflows/: ci.yml
bench/: bench_engine.cpp
include/: fix_output.hpp  itch_parser.hpp  matching_engine.hpp  memory_pool.hpp  metrics_manager.hpp  order.hpp  order_book.hpp  replay_engine.hpp
proto/: metrics.proto
scripts/: download_itch.sh
src/: fix_output.cpp  itch_parser.cpp  main.cpp  matching_engine.cpp  metrics_server.cpp  order_book.cpp  replay_engine.cpp
tests/: test_matching.cpp
